--- a/angular-ui/src/app/employees/employee-edit/employee-edit.component.html
+++ b/angular-ui/src/app/employees/employee-edit/employee-edit.component.html
@@ -117,5 +117,5 @@
       </div>
       </form>
   </div>
-  <a href="/employee"><button id="list_return_btn">Back to list</button></a>
+  <a href="/employee/all"><button id="list_return_btn">Back to list</button></a>
 </div>
