--- a/angular-ui/src/app/login/login.component.scss
+++ b/angular-ui/src/app/login/login.component.scss
@@ -3,7 +3,7 @@
   form {
     display: flex;
     margin: 0 auto;
-    
+
     .login-form {
       display: flex;
       flex-direction: column;
@@ -47,7 +47,7 @@
           }
 
           .input {
-              margin: 10px 0;
+              margin: 10px auto;
               .field {
                   display: flex;
                   flex-direction: row;
