--- a/angular-ui/src/app/dashboard/dashboard.component.html
+++ b/angular-ui/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 <div class="header">
     <h1>Welcome to your dashboard!</h1>
     <div class="dashboard-choices">
-        <a class="btn" href="/employee"><button id="dash_view_btn">View Employees</button></a>
+        <a class="btn" href="/employee/all"><button id="dash_view_btn">View Employees</button></a>
         <a class="btn" href="/employee/create"><button id="dash_create_btn">Create Employee</button></a>
     </div>
 </div>
