--- a/angular-ui/src/app/employees/employee-view/employee-view.component.html
+++ b/angular-ui/src/app/employees/employee-view/employee-view.component.html
@@ -51,5 +51,5 @@
           <a href="/employee/{{employee.id}}/edit"><button id="confirm_changes_btn" type="submit">Edit Employee</button></a>
       </div>
   </div>
-  <a href="/employee"><button id="list_return_btn">Back to list</button></a>
+  <a href="/employee/all"><button id="list_return_btn">Back to list</button></a>
 </div>
