--- a/angular-ui/src/app/login/login.component.html
+++ b/angular-ui/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <div class="login-container">
-  <form [formGroup]="loginForm" (ngSubmit)="onSubmit();">
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit($event);">
   <div class="login-form">
       <div class="title">
           <h1>Login</h1>
